# palaver

./: .gitignore  AGENTS.md  AGENT_README.org  CLAUDE.md  IN_PROGRESS.md  README.org  SESSION_STATE.md  checkpoint.org  coverage.cfg  fix_plan.org  piper.sh  pyproject.toml  pytest.ini  run_vad_recorder.sh  todo.org
.beads/: issues.jsonl
ai_ingore_these_files/: READFIRST.md  gemma3_project_outline.org  grok_chat1.md  ideas.org  vad_recorder_components.md  vad_recorder_seq1.md
design_docs/: diagrams1.md  distributed_pipeline.md  high_level_design.md  high_level_sketch.org  long_note_termination_fix.md  multiprocess_transcription.md  note_body_detection_explanation.md  recorder_refactoring_plan.md  refactor1.md  session_summary_2025-12-04.md  simulated_transcription_refactoring.md  stage_1_phases_1_to_5.md  text_processor_commanddoc_enhancement_plan.md  timestamp_logging_feature.md  tui_evaluation_and_plan.md  tui_note_complete_notification_fix.md  tui_split_transcript_layout.md  tui_ux_fixes_implemented.md  tui_ux_issues_and_recommendations.md  vad_recorder_async_refactoring_plan.md  vtt_server_modes.md  websockets1.md
models/: en_US-amy-medium.onnx  en_US-amy-medium.onnx.json  en_US-bryce-medium.onnx  en_US-bryce-medium.onnx.json  en_US-joe-medium.onnx  en_US-joe-medium.onnx.json  en_US-kristin-medium.onnx  en_US-kristin-medium.onnx.json  en_US-lessac-medium.onnx.json  en_US-ryan-medium.onnx  en_US-ryan-medium.onnx.json
process_docs/: epic_rescan_server.org  guardrails_0.1.org  guardrails_palaver_0.1.org  labs_n_foundries_0.1.org  labs_n_foundries_0.2.org  task-template.org
prototypes/: chatbot.py  segmizer.py
recorder/: EXPERIMENT_long_note.md  vad_recorder.py  vad_recorder_v2_long_note.py
scripts/: api_wrapper.py  clear_coverage.sh  cmd_tool.py  direct_recorder.py  edit_assist.py  file_cmds.py  file_sender.py  file_to_text.py  file_vtt.py  get_gpu.py  grok_alter_model.py  loggers.py  match_test.py  merview.py  mic_cmds.py  mic_to_text.py  mic_vtt.py  playback.py  record.py  rescan.py  run_mic.py  run_scribe.py  scribe_server.py  script_utils.py  server.py  sounder.py  sync_loggers.py  test_client.py  test_match.py  tevents_from_block_records.py  vtt_server.py  whisper_stream.py
server/: pyproject.toml  pytest.ini
signal_sounds/: source1.url  (+1 more)
(+228 files in other folders)
